//in the name of ALLAH
//YA MAHDI


#ifndef KETAB_E_MAN_GENRE_H
#define KETAB_E_MAN_GENRE_H


class Genre {
};


#endif //KETAB_E_MAN_GENRE_H
