classDiagram
    %% ========== کلاس‌های پایه ==========
    
    class BaseEntity {
        <<abstract>>
        -qint64 id
        -QDateTime createdAt
        -QDateTime updatedAt
        +getId() qint64
        +getCreatedAt() QDateTime
        +getUpdatedAt() QDateTime
        #setId(qint64) void
        #touchUpdatedAt() void
    }

    %% ========== User و نقش‌ها (وراثت) ==========
    
    class User {
        <<abstract>>
        -QString username
        -QString email
        -QString passwordHash
        -QString securityQuestion
        -QString securityAnswerHash
        -qint64 walletId
        -QVector~qint64~ reviewIds
        -QVector~qint64~ notificationIds
        -bool isBlocked
        -bool isActive
        +authenticatePassword(plainPassword) bool
        +setPassword(plainPassword) void
        +resetPassword(question, answer, newPassword) bool
        +addReview(reviewId) void
        +removeReview(reviewId) void
        +addNotification(notifId) void
        +getUnreadNotificationCount() int
        +getWalletId() qint64
        +getRole() Role
    }

    class RegularUser {
        -QVector~qint64~ shelfIds
        -QVector~qint64~ purchasedBookIds
        -QVector~qint64~ savedBookIds
        -QVector~Genre~ favoriteGenres
        +purchaseBook(bookId) void
        +addShelf(shelfId) void
        +removeShelf(shelfId) void
        +addToSavedBooks(bookId) void
        +removeFromSavedBooks(bookId) void
        +addFavoriteGenre(genre) void
        +removeFavoriteGenre(genre) void
        +getPurchaseHistory() QVector~qint64~
        +getSavedBooks() QVector~qint64~
        +getFavoriteGenres() QVector~Genre~
    }

    class Publisher {
        -QVector~qint64~ myBookIds
        +publishBook(bookId) void
        +editBook(bookId, bookData) void
        +removeBook(bookId) void
        +applyDiscountToBook(bookId, percent) void
        +receiveSaleIncome(amount) void
        +getRevenue() double
        +getAverageRatingOfMyBooks() double
        +getTopSellingBooks(count) QVector~qint64~
        +getBottomSellingBooks(count) QVector~qint64~
        +getTotalPublishedBooks() int
    }

    class Admin {
        +blockUser(userId) void
        +unblockUser(userId) void
        +deleteUser(userId) void
        +activateUserAccount(userId) void
        +deleteBook(bookId) void
        +editBook(bookId, bookData) void
        +viewAllUsers() QVector~qint64~
        +viewAllBooks() QVector~qint64~
        +deleteReview(reviewId) void
        +viewServerStats() ServerStats
    }

    %% ========== Book ==========
    
    class Book {
        -QString title
        -QString author
        -qint64 publisherId
        -Genre genre
        -QString description
        -double price
        -double discountPercent
        -QString coverImagePath
        -QString pdfFilePath
        -int salesCount
        -bool isActive
        -QVector~qint64~ reviewIds
        +getAverageRating() double
        +getTotalReviewCount() int
        +applyDiscount(percent) void
        +incrementSales() void
        +deactivate() void
        +reactivate() void
        +addReview(reviewId) void
        +removeReview(reviewId) void
        +getPublisher() qint64
    }

    %% ========== Review ==========
    
    class Review {
        -qint64 userId
        -qint64 bookId
        -QString text
        -int stars
        +editText(newText) void
        +editStars(newStars) void
        +remove() void
    }

    %% ========== Cart & Purchase ==========
    
    class Cart {
        -qint64 ownerId
        -QVector~CartItem~ items
        +addItem(bookId, quantity) void
        +removeItem(bookId) void
        +clear() void
        +getTotalPrice() double
        +getTotalDiscount() double
        +getFinalPrice() double
        +getItemCount() int
        +checkout() qint64
    }

    class CartItem {
        -qint64 bookId
        -int quantity
        +getSubtotal() double
        +getDiscountedSubtotal() double
    }

    class Purchase {
        -qint64 buyerId
        -QVector~qint64~ bookIds
        -double totalAmount
        -QDateTime purchaseDate
        +getBooks() QVector~qint64~
        +getBuyer() qint64
    }

    %% ========== Shelf (فقط RegularUser) ==========
    
    class Shelf {
        -QString name
        -qint64 ownerId
        -QVector~qint64~ bookIds
        +addBook(bookId) void
        +removeBook(bookId) void
        +rename(newName) void
    }

    %% ========== Notification ==========
    
    class Notification {
        -qint64 recipientId
        -QString message
        -NotificationType type
        -QDateTime timestamp
        -bool isRead
        +markAsRead() void
    }

    %% ========== Wallet (برای RegularUser و Publisher) ==========
    
    class Wallet {
        -qint64 ownerId
        -double balance
        -QVector~qint64~ transactionIds
        +deposit(amount) void
        +withdraw(amount) bool
        +getBalance() double
        +addTransaction(transactionId) void
    }

    class Transaction {
        -qint64 walletId
        -double amount
        -TransactionType type
        -QString description
        -QDateTime timestamp
    }

    %% ========== Server ==========
    
    class Server {
        -QMap<qint64, User*> users
        -QMap<qint64, Book*> books
        -QMap<qint64, Review*> reviews
        -QMap<qint64, Purchase*> purchases
        -QMap<qint64, Shelf*> shelves
        -QMap<qint64, Notification*> notifications
        -QMap<qint64, Wallet*> wallets
        -QVector<QTcpSocket*> clients
        -ServerStats stats
        +start() void
        +stop() void
        +authenticateUser(username, password) qint64
        +registerUser(userData) qint64
        +searchBooks(query) QVector<qint64>
        +handleClientRequest(socket, request) void
        +broadcastNotification(notifId) void
        +getUserById(id) User*
        +getBookById(id) Book*
        +getReviewById(id) Review*
        +createReview(userId, bookId, text, stars) qint64
        +deleteReview(reviewId) void
        +processPurchase(buyerId, cartId) qint64
        +getStats() ServerStats
    }

    class ServerStats {
        -int connectedUsers
        -int totalRequests
        -double cpuUsage
        -double ramUsage
        -ServerHealth health
    }

    %% ========== Enums ==========
    
    class Role {
        <<enumeration>>
        USER
        PUBLISHER
        ADMIN
    }

    class Genre {
        <<enumeration>>
        FICTION
        SCIENCE
        HISTORY
        FANTASY
        ROMANCE
        MYSTERY
        BIOGRAPHY
        SELF_HELP
        TECH
    }

    class NotificationType {
        <<enumeration>>
        NEW_BOOK_IN_FAVORITE_GENRE
        DISCOUNT_ON_SAVED_BOOK
        NEW_SALE_FOR_PUBLISHER
        NEW_REVIEW_ON_MY_BOOK
        PURCHASE_COMPLETE
    }

    class TransactionType {
        <<enumeration>>
        DEPOSIT
        WITHDRAW
        PURCHASE
        SALE_INCOME
        REFUND
    }

    class ServerHealth {
        <<enumeration>>
        HEALTHY
        BUSY
        OVERLOADED
    }

    %% ========== وراثت ==========
    
    BaseEntity <|-- User
    User <|-- RegularUser
    User <|-- Publisher
    User <|-- Admin

    %% ========== روابط ==========
    
    User "1" --> "0..*" Review : نوشته (reviewIds)
    User "1" --> "0..*" Notification : دریافت کرده (notificationIds)
    User "1" --> "1" Wallet : دارد (walletId)

    RegularUser "1" --> "0..1" Cart : دارد
    RegularUser "1" --> "0..*" Purchase : خریده (buyerId)
    RegularUser "1" --> "0..*" Shelf : ایجاد کرده (shelfIds)
    RegularUser "1" --> "0..*" Book : ذخیره کرده (savedBookIds)
    RegularUser "1" --> "0..3" Genre : علاقه‌مند (favoriteGenres)

    Publisher "1" --> "0..*" Book : منتشر کرده (myBookIds)

    Book "1" --> "0..*" Review : دارد (reviewIds)
    Book "1" --> "1" Genre : متعلق به
    Book "1" --> "1" Publisher : منتشرشده توسط (publisherId)

    Cart "1" --> "0..*" CartItem : شامل
    CartItem "1" --> "1" Book : مرجع (bookId)

    Purchase "1" --> "1..*" Book : شامل (bookIds)
    Purchase "1" --> "1" RegularUser : خریدار (buyerId)
    Purchase "1" ..> "1" Wallet : برداشت از کیف‌پول خریدار
    Purchase "1" ..> "1" Wallet : واریز به کیف‌پول ناشر

    Shelf "1" --> "0..*" Book : شامل (bookIds)
    Shelf "1" --> "1" RegularUser : مالک (ownerId)

    Review "1" --> "1" User : نویسنده (userId)
    Review "1" --> "1" Book : مربوط به (bookId)

    Notification "1" --> "1" User : گیرنده (recipientId)
    Notification "1" --> "1" NotificationType : نوع

    Wallet "1" --> "1" User : مالک (ownerId)
    Wallet "1" --> "0..*" Transaction : شامل (transactionIds)
    Transaction "1" --> "1" Wallet : متعلق به (walletId)

    Server "1" --> "0..*" User : مدیریت
    Server "1" --> "0..*" Book : مدیریت
    Server "1" --> "0..*" Review : مدیریت
    Server "1" --> "0..*" Purchase : مدیریت
    Server "1" --> "0..*" Shelf : مدیریت
    Server "1" --> "0..*" Notification : مدیریت
    Server "1" --> "0..*" Wallet : مدیریت
    Server "1" --> "1" ServerStats : دارد
